@@ -1326,7 +1326,7 @@ public class MetadataTest {
         // Setup 6 threads, where 3 are updating metadata & 3 are reading snapshot/cluster.
         // Metadata will be updated with higher # of nodes, partition-counts, leader-epoch.
         // int numThreads = 6;
-        ExecutorService service = Executors.newFixedThreadPool(numThreads);
+        ExecutorService service = Executors.newVirtualThreadPerTaskExecutor();
         CountDownLatch allThreadsDoneLatch = new CountDownLatch(numThreads);
         CountDownLatch atleastMetadataUpdatedOnceLatch = new CountDownLatch(1);
         AtomicReference<MetadataSnapshot> newSnapshot = new AtomicReference<>();
